--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 </head>
 <body>
     <canvas id="myCanvas" width="800" height="600"></canvas>
-    <script src="addVideo.js"></script>
+    <script src="fabric.min.js"></script>
+
 </body>
 </html>
