vedio is not playing

--- a/index.html
+++ b/index.html
@@ -2,11 +2,13 @@
 <html>
 <head>
     <title>Fabric.js Video Example</title>
+    <!-- Include Fabric.js from CDN -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/fabric.js/4.6.0/fabric.min.js"></script>
 </head>
 <body>
     <canvas id="myCanvas" width="800" height="600"></canvas>
-    <script src="fabric.min.js"></script>
-
+    <!-- Reference to your JavaScript file -->
+    <script src="addVideo.js"></script>
 </body>
 </html>
+
